added search option for locations

--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ a{
     background-color: var(--primary-color);
     border:none;
     padding:0.7rem;
-    font-size:1.7rem;
+    font-size:1rem;
     border-radius:4px;
     color:var(--white-color);
 }
@@ -133,6 +133,13 @@ nav ul li::before{
 nav ul li:hover::before {
     opacity:1;
     width: 100%;
+}
+
+.btn{
+    font-size: 1.3rem;
+    color: var(--white-color);
+    cursor: pointer;
+    display: none;
 }
 
 main{
@@ -217,4 +224,41 @@ main{
         transform: translate(-0%);
     }
     
+}
+
+.img-color h2 span{
+    color:transparent;
+    -webkit-text-stroke: 1px var(--white-color);
+}
+
+
+#location-search{
+    transform: translateY(-250%);
+}
+
+.form-wrapper{
+    background-color: rgba(0,0,0,0.6);
+    padding:2rem;
+    width: 100%;
+}
+
+form{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.form-control{
+    width: 100%;
+}
+
+form input,
+select{
+    padding: 0.6rem;
+    outline: none;
+    font-size: 1.1rem;
+    color: #000;
+    border: 1px solid var(--light-gray-color);
+    margin: 0 0.4rem;
+    border-radius: 4px;
 }
