responsive nav bar

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -11,4 +11,33 @@
     .btn{
         display: block;
     }
+
+    nav ul{
+        flex-direction: column;
+        position: fixed;
+        width: 100%;
+        height: 400px;
+        background: var(--primary-color);
+        top: -600px;
+        left:0;
+        padding: 3rem 1rem;
+        transition: all 0.5s ease-in-out;
+    }
+
+    nav ul li a{
+        display: block;
+        margin: 15px;
+    }
+
+    .close-btn{
+        position: absolute;
+        top:0rem;
+        right: 0;
+        margin: 25px;
+    }
+
+    nav ul.display{
+        top:0;
+        transition: all 0.5s ease-in-out;
+    }
 }
