--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,40 +4,92 @@
         padding: 0 1rem;
 
     }
+
+    .swiper {
+        height: 90vh;
+    }
+
+    .img-overlay p {
+        letter-spacing: 6px;
+    }
+
+    .img-overlay h2 {
+        font-size: 3rem;
+        letter-spacing: 3px;
+    }
 }
 
 
-@media(max-width:900px){
-    .btn{
+@media(max-width:900px) {
+    .btn {
         display: block;
     }
 
-    nav ul{
+    nav ul {
         flex-direction: column;
         position: fixed;
         width: 100%;
         height: 400px;
         background: var(--primary-color);
         top: -600px;
-        left:0;
+        left: 0;
         padding: 3rem 1rem;
         transition: all 0.5s ease-in-out;
     }
 
-    nav ul li a{
+    nav ul li a {
         display: block;
         margin: 15px;
     }
 
-    .close-btn{
+    .close-btn {
         position: absolute;
-        top:0rem;
+        top: 0rem;
         right: 0;
         margin: 25px;
     }
 
-    nav ul.display{
-        top:0;
+    nav ul.display {
+        top: 0;
         transition: all 0.5s ease-in-out;
+    }
+
+    nav ul li::before {
+        top: 45px;
+        left: 10px;
+
+    }
+
+    nav ul li:hover::before {
+        width: 20%;
+    }
+
+
+    .swiper {
+        height: 70vh;
+    }
+
+    .img-overlay p {
+        letter-spacing: 4px;
+    }
+
+    .img-overlay h2 {
+        font-size: 2.5rem;
+        letter-spacing: 4px;
+    }
+
+
+    #location-search {
+        transform: translateY(0);
+        margin:2rem 0;
+    }
+
+    form{
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    form button{
+
     }
 }
