--- a/css/style.css
+++ b/css/style.css
@@ -83,11 +83,16 @@ a{
 header{
     padding: 1rem 0;
     background-color: var(--primary-color);
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     z-index: 9999;
+    transition: all 0.3s ease-in-out;
+}
+
+header.sticky{
+    background: var(--primary-color);
 }
 
 .logo{
@@ -261,4 +266,67 @@ select{
     border: 1px solid var(--light-gray-color);
     margin: 0 0.4rem;
     border-radius: 4px;
+}
+
+.about-content-wrapper{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-column-gap:3rem ;
+    margin: 3rem 0;
+}
+
+.about-content-wrapper h2 span{
+    color: var(--primary-color);
+    font-family: "ubuntu";
+}
+
+.about-content-wrapper ul{
+    list-style: none;
+}
+
+.about-content-wrapper ul .icons{
+    display: flex;
+    align-items: center;
+    margin:1rem 0;
+}
+
+.about-content-wrapper ul .icons i{
+    background-color: var(--primary-color);
+    padding:0.8rem;
+    border-radius: 50%;
+    color: var(--white-color);
+}
+
+.about-content-wrapper ul p{
+    margin-left: 1rem;
+}
+
+.agency-right-side .img{
+    position: relative;
+}
+
+.agency-right-side .img img{
+    width: 75%;
+    height: 100%;
+    object-fit: cover;
+    margin: 0 auto;
+    display: block;
+    transition: 0.5s ease-in-out;
+}
+
+.agency-right-side .img::after{
+    content: "";
+    position: absolute;
+    top:15px;
+    left:55px;
+    bottom:0;
+    right: 0;
+    background: var(--primary-color);
+    width: 70%;
+    height: 100%;
+    z-index: -1;
+}
+
+.agency-right-side .img img:hover{
+    transform: scale(0.95);
 }
