added count bar and grid of famous tours

--- a/css/style.css
+++ b/css/style.css
@@ -330,3 +330,140 @@ select{
 .agency-right-side .img img:hover{
     transform: scale(0.95);
 }
+
+/* choose your place */
+#choose-place{
+    padding: 6rem 0;
+}
+
+.choose-wrapper{
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-gap: 2rem;
+}
+.lg-img{
+    transition: all 0.5s ease-in-out;
+    cursor: pointer;
+    position: relative;
+    width: 100%;
+    height: 96%;
+}
+
+.lg-img:hover::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+}
+
+.lg-img:hover{
+    transform: scale(1.02);
+
+}
+
+.img-content{
+    position: absolute;
+    bottom: 20px;
+}
+
+.img-content h2{
+    padding:0 2rem;
+    color: var(--white-color);
+}
+
+.hidden-content{
+    padding: 0.5rem 2rem;
+    color: var(--white-color);
+    /* display: none; */
+    transform: translateY(120%);
+    transition: all 0.5s ease-in-out;
+}
+.lg-img:hover .hidden-content{
+    transform: translateY(0);
+}
+.price-label{
+    background: var(--primary-color);
+    color: var(--white-color);
+    padding: 0.5rem 1rem;
+    position:absolute;
+    top: 70px;
+    right: 0;
+    transform: rotate(-90deg);
+}
+
+.row-wise-img{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 2rem;
+}
+
+.row-wise-img .img-content h2{
+    padding:0 2rem;
+    color: var(--white-color);
+}
+
+.row-wise-img .img-content{
+    position: absolute;
+    bottom: 1px;
+}
+
+/* count bar */
+
+#static-counter{
+    padding:6rem 0;
+    background: url('../images/banner.jpg') no-repeat center center/cover ;
+    background-attachment:fixed ;
+    position: relative;
+    /* width: 80%;
+    height: 80%; */
+    z-index: 4;
+}
+
+#static-counter::after{
+    content:"";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+    z-index: -1;
+}
+
+.static-wrapper{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-gap: 2rem;
+    text-align: center;
+    align-items: center;
+    height: 100%;
+    padding: 2rem 0;
+    z-index: 50;
+
+}
+.static-icons{
+    color: var(--white-color);
+    cursor: pointer;
+}
+.static-icons i{
+    font-size: 3rem;
+    padding: 2rem;
+    border-radius:50% ;
+    border: 2px solid var(--primary-color);
+    cursor: pointer;
+    transition: all 0.5s ease-in-out;
+}
+.number{
+    font-size: 2.5rem;
+    font-weight: 600;
+    margin-top: 1rem;
+}
+
+.static-icons i:hover{
+    background: var(--primary-color);
+    border: none;
+    transform: translateY(-20%);
+}
