--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ html{
     margin: 0 auto;
     padding: 0 2rem;
     width: 100%;
-
+    overflow: hidden;
 }
 
 img{
@@ -466,4 +466,59 @@ select{
     background: var(--primary-color);
     border: none;
     transform: translateY(-20%);
+}
+
+
+/* carousel */
+
+#top-destination{
+    padding: 6rem 0;
+}
+
+.top-destination-wrapper{
+    width: 100%;
+}
+
+.carousel{
+    position: relative;
+}
+
+.carousel:hover::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+}
+
+.carousel-img-overlay{
+    width: 100%;
+    cursor: pointer;
+
+}
+
+.hidden-content-carousel{
+    padding: 0.5rem 2rem;
+    color: var(--white-color);
+    transform: translateY(120%);
+    transition: all 0.5s ease-in-out;
+}
+
+.carousel-img-overlay{
+    padding-right: 0.5rem;
+}
+
+.carousel:hover .hidden-content-carousel{
+    transform: translateY(0%);
+}
+
+.carousel:hover{
+    transform: scale(1.02);
+    transition: all 0.5s ease-in-out;
+}
+
+.carousel-img-overlay .img-content h2{
+    font-size: 1.2rem;
 }
