responsiveness added to new items

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -81,27 +81,45 @@
 
     #location-search {
         transform: translateY(0);
-        margin:2rem 0;
+        margin: 2rem 0;
     }
 
-    form{
+    form {
         flex-direction: column;
         gap: 1rem;
     }
 
-    .about-content-wrapper{
-        grid-template-columns: repeat(1,1fr);
+    .about-content-wrapper {
+        grid-template-columns: repeat(1, 1fr);
     }
 
-    .agency-right-side .img img{
+    .agency-right-side .img img {
         width: 95%;
     }
 
-    .agency-right-side .img::after{
-        top:15px;
+    .agency-right-side .img::after {
+        top: 15px;
         left: 15px;
         bottom: 0;
         right: 0;
         width: 90%;
+    }
+
+    /* choose-place */
+    .choose-wrapper {
+        grid-template-columns: 1fr;
+
+    }
+
+    .row-wise-img {
+        grid-template-columns: 1fr;
+    }
+
+    .img-content{
+        bottom: 10px;
+    }
+
+    .static-wrapper{
+        grid-template-columns: repeat(2,1fr);
     }
 }
