--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,8 @@
 :root{
     --primary-color: #2095ae;
     --white-color:#fff;
-    --ight-grey-color:#ddd;
-    --blue-color:
+    --light-grey-color:#ddd;
+    --blue-color:#001f3f;
 }
 
 *{
@@ -521,4 +521,124 @@ select{
 
 .carousel-img-overlay .img-content h2{
     font-size: 1.2rem;
+}
+
+#footer{
+    padding: 6rem 0;
+    background:var(--blue-color) ;
+}
+
+.footer-content{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    border: 1px solid var(--light-gray-color);
+}
+
+.ft-content{
+    display: flex;
+    align-items: center;
+    padding: 0.5rem;
+    color: var(--white-color);
+}
+
+.icon i{
+    padding: 1rem;
+    font-size: 2.5rem;
+    background: var(--primary-color);
+}
+
+.content{
+    padding:1rem ;
+}
+
+.footer-wraper{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    padding: 2rem 0;
+    grid-gap: 2rem;
+    color: var(--white-color);
+    margin: 4rem 0;
+}
+
+.about img{
+    width: 50%;
+    object-fit: cover;
+}
+
+.social-icons{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.social-icons i {
+    background-color: var(--primary-color);
+    color: var(--white-color);
+    padding: 0.5rem;
+    font-size: 1.3rem;
+    margin: 1rem 0;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.about .lead{
+    font-size: 0.95rem;
+    margin-top:1rem ;
+}
+
+.links ul{
+    list-style-type: none;
+}
+
+.links ul li{
+    margin: 1rem;
+    font-size: 1rem;
+}
+
+.links ul li a{
+    color: var(--white-color);
+}
+
+.subscribe .lead{
+    font-size: 1.1rem;
+    letter-spacing: 1rem;
+}
+
+form{
+    position: relative;
+}
+
+.subscribe input{
+    width: 100%;
+    outline:none;
+    border:1px solid var(--light-grey-color);
+    padding: 0.6rem 1rem;
+    border-radius: 5px;
+    margin-top: 1rem;
+}
+
+.subscribe button{
+    display: block;
+    position: absolute;
+    top: 35%;
+    right: 4%;
+    padding: 0.5rem 1.5rem;
+    outline: none;
+    border: none;
+    border-radius:5px;
+    background: var(--primary-color);
+    color: var(--white-color);
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.footer{
+    border-top:1px solid var(--light-grey-color);
+    
+}
+
+.footer p{
+    text-align: center;
+    padding:1rem;
+    color: var(--white-color);
 }
